# password-manager

./: .gitignore  2  3  README.md  argon2-deps.json  io.github.idevecore.PasswordManager.Devel.json  io.github.idevecore.PasswordManager.json  meson.build  pypi-deps.json
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/0/3/: stats  (+6 more)
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/3/: stats
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/5/: stats
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/7/: stats
.flatpak-builder/ccache/8/: stats
.flatpak-builder/ccache/9/: stats
.flatpak-builder/ccache/a/: stats
.flatpak-builder/ccache/b/: stats
.flatpak-builder/ccache/c/: stats
.flatpak-builder/ccache/d/: stats
.flatpak-builder/ccache/e/: stats
.flatpak-builder/ccache/f/: stats
.flatpak-builder/checksums/: x86_64-io.github.idevecore.PasswordManager.Devel.json  x86_64-io.github.idevecore.PasswordManager.json
.flatpak-builder/downloads/198caafb44239b60e252492445da556afafc7d1e3ab7a1fb3f0584ef6d742375/: cffi-1.15.1-cp37-cp37m-macosx_10_9_x86_64.whl
.flatpak-builder/downloads/1e74c6b51a9ed6589199c787bf5f9875612ca4a8a0785fb2d4a84429badaf22a/: cffi-1.15.1-cp38-cp38-manylinux_2_12_i686.manylinux2010_i686.manylinux_2_17_i686.manylinux2014_i686.whl
.flatpak-builder/downloads/2012c72d854c2d03e45d06ae57f40d78e5770d252f195b93f581acf3ba44496e/: cffi-1.15.1-cp310-cp310-manylinux_2_17_s390x.manylinux2014_s390x.whl
.flatpak-builder/downloads/285d29981935eb726a4399badae8f0ffdff4f5050eaa6d0cfc3f64b857b77185/: cffi-1.15.1-cp310-cp310-macosx_11_0_arm64.whl
.flatpak-builder/downloads/2c3e3cc67fdb7d82c4718f19b4e7a87123caf8a93fde7e23cf66ac0337d3cb3f/: argon2_cffi_bindings-21.2.0-pp37-pypy37_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
.flatpak-builder/downloads/3548db281cd7d2561c9ad9984681c95f7b0e38881201e157833a2342c30d5e8c/: cffi-1.15.1-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
.flatpak-builder/git/https_github.com_flatpak_libportal.git/: FETCH_HEAD  config
.github/: FUNDING.yml
data/: io.github.idevecore.PasswordManager.appdata.xml.in.in  io.github.idevecore.PasswordManager.desktop.in.in  io.github.idevecore.PasswordManager.gschema.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application_data.py  argon2.py  db.py  define.in  main.py  meson.build  password-manager.gresource.xml  password-manager.in  password_hasher.py  user.py  utils.py  window.blp  window.py
src/assets/: styles.css
src/assets/icons/: meson.build
src/components/: __init__.py
src/components/create_account_dialog/: create_account_dialog.blp
src/components/register_dialog/: register_dialog.blp  register_dialog.py
src/components/shortcuts/: shortcuts.blp  shortcuts.py
src/pages/: __init__.py
src/pages/authentication/: authentication.blp  authentication.py
src/pages/dashboard/: dashboard.blp  dashboard.py
src/pages/welcome/: welcome.blp  welcome.py
src/tests/: __init__.py  password_hasher_test.py
(+1638 files in other folders)
